# skillpilot

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: generate_license.py  sync_skills.py
src/devpilot/: cli.py
src/devpilot/core/: claude.py  config.py  license.py  skills.py
tests/: test_claude.py  test_cli.py  test_config.py  test_integration.py  test_license.py  test_skills.py
